--- a/interfaces/Referral-App/src/app/referral/referral.page.scss
+++ b/interfaces/Referral-App/src/app/referral/referral.page.scss
@@ -28,18 +28,23 @@ a {
 }
 
 ion-footer {
-  ion-button {
-    &.main-screen-button {
-      white-space: pre-wrap;
+  .nested-button-with-label {
+    white-space: pre-wrap;
 
-      ion-text {
-        margin-left: 4px;
-      }
+    ion-text {
+      margin-left: 4px;
     }
+  }
 
-    ion-img.whatsapp-image {
-      height: 50px;
-      width: 50px;
-    }
+  .icon-as-button {
+    background: var(--ion-color-primary);
+    fill: var(--ion-color-primary-contrast);
+    padding: 6px;
+    border-radius: 10px;
+  }
+
+  .button-icon--whatsapp-image {
+    height: 50px;
+    width: 50px;
   }
 }
