--- a/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.scss
@@ -26,6 +26,10 @@
 
   width: 80%;
   max-width: 80%;
+
+  [dir='rtl'] & {
+    transform-origin: top right;
+  }
 }
 
 .dialogue-turn--speech-arrow {
@@ -43,16 +47,15 @@
   .dialogue-turn--speech-arrow {
     left: var(--dialogue-turn--margin-around-card-horizontal);
     border-right-color: var(--ion-color-dark);
-  }
 
-  // Adjust for RTL: (Limited support: https://developer.mozilla.org/en-US/docs/Web/CSS/:dir#Browser_compatibility)
-  .dialogue-turn--speech-arrow:dir(rtl) {
-    // Reset LTR-styles first:
-    left: auto;
-    border-right-color: transparent;
+    [dir='rtl'] & {
+      // Reset LTR-styles first:
+      left: auto;
+      border-right-color: transparent;
 
-    right: var(--dialogue-turn--margin-around-card-horizontal);
-    border-left-color: var(--ion-color-dark);
+      right: var(--dialogue-turn--margin-around-card-horizontal);
+      border-left-color: var(--ion-color-dark);
+    }
   }
 }
 
@@ -69,16 +72,15 @@
   .dialogue-turn--speech-arrow {
     right: var(--dialogue-turn--margin-around-card-horizontal);
     border-left-color: var(--ion-color-light);
-  }
 
-  // Adjust for RTL: (Limited support: https://developer.mozilla.org/en-US/docs/Web/CSS/:dir#Browser_compatibility)
-  .dialogue-turn--speech-arrow:dir(rtl) {
-    // Reset LTR-styles first:
-    right: auto;
-    border-left-color: transparent;
+    [dir='rtl'] & {
+      // Reset LTR-styles first:
+      right: auto;
+      border-left-color: transparent;
 
-    left: var(--dialogue-turn--margin-around-card-horizontal);
-    border-right-color: var(--ion-color-light);
+      left: var(--dialogue-turn--margin-around-card-horizontal);
+      border-right-color: var(--ion-color-light);
+    }
   }
 }
 
